# onyx

./: CONTEXT.md  Cargo.toml  README.md
docs/: AI.md  BACKLOG.md  CLOUD_SYNC.md  NOTION_MIGRATION.md  QUICKGUIDE.md
scripts/: reorg_notion.py
src/: app.rs  config.rs  db_view.rs  dispatch.rs  error.rs  external.rs  graph_sim.rs  keymap.rs  main.rs  notion_import.rs  page_nav.rs  rag.rs  theme.rs  todo.rs
src/editor/: buffer.rs  history.rs  mod.rs  modes.rs
src/integrations/: gcal.rs  gdrive.rs  gtasks.rs  mod.rs  oauth.rs  ollama.rs
src/markdown/: mod.rs  parse.rs  render.rs
src/ui/: agenda.rs  ai.rs  calendar.rs  cmdline.rs  confirm.rs  database.rs  drive.rs  editor_pane.rs  file_tree.rs  graph.rs  gtasks.rs  help.rs  home.rs  mod.rs  palette.rs  preview.rs  prompt.rs  props.rs  quicknote.rs  search.rs  sidebar.rs  splitview.rs  status.rs  switcher.rs  tabline.rs  tasks.rs  title_bar.rs  todo.rs
src/vault/: index.rs  index_cache.rs  mod.rs  tree.rs  watcher.rs
